# pseudoregalia-timer-mod

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
PseudoCustomTTMod/: CMakeLists.txt  dllmain.cpp
PseudoCustomTTMod/include/: Event.hpp  ModHooks.hpp  Trigger.hpp
PseudoCustomTTMod/src/: Event.cpp  Logger.cpp  ModHooks.cpp  Trigger.cpp
PseudoregaliaTimerMod/: CMakeLists.txt  dllmain.cpp
PseudoregaliaTimerMod/include/: Event.hpp  Logger.hpp  Trigger.hpp
PseudoregaliaTimerMod/src/: Event.cpp  Logger.cpp  ModHooks.cpp  Trigger.cpp
docs/: build_instructions.md  todo.md
unreal/Config/: DefaultEngine.ini
unreal/Content/Animations/Player/: dreamLady_Idle.uasset
unreal/Content/Blueprints/GameData/: MV_GameInstance.uasset
unreal/Content/Meshes/Characters/: dreamLady_pro.uasset  sybil_spiritForm_PhysicsAsset.uasset
unreal/Content/Mods/CustomOptions/: PseudoCustomTTMod.uasset  PseudoregaliaTimerMod.uasset
unreal/Content/Mods/PseudoCustomTTMod/: BPL_CTT_Save.uasset  BP_CTT_Ghost.uasset  BP_CTT_Manager.uasset  MV_CTT_Save.uasset  ModActor.uasset  NaruMonoDemo-Regular.uasset  NaruMonoDemo-Regular_Font.uasset  ST_PlayerInfo.uasset  WBP_CTT_Timer.uasset
unreal/Content/Mods/PseudoCustomTTMod/Options/: WBP_CTT_EventItem.uasset  (+1 more)
unreal/Content/Mods/PseudoregaliaTimerMod/: BPL_PTM_Save.uasset  BP_PTM_Ghost.uasset  BP_PTM_Manager.uasset  MV_PTM_Save.uasset  ModActor.uasset  ST_PlayerInfo.uasset
unreal/Content/ThirdPerson/Player/: BP_PlayerGoatMain.uasset
unreal/Content/UI/Fonts/: semplicita_medium.uasset  semplicita_medium_Font.uasset
(+18 files in other folders)
